* Mark form as pristine after successful save * Fixed standup music trigger and subscription * Increased settings button z-index * Fixed disappearing Mokkapps webiste button in about dialog

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,5 @@
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 100;
 }
